<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_setting"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_history"
        android:title="@string/history"
        app:showAsAction="never" />

    <!--<item
        android:id="@+id/action_rate_us"
        android:title="@string/rate_us"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_more_apps"
        android:title="@string/more_apps"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_privacy_policy"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>