<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_map_constraint_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".com.secureapps.speedometer.MapFragment" />

    <Button
        android:id="@+id/stop_button_id"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_red"
        android:text="@string/stop"
        android:fontFamily="@font/calibri_bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/start_button_id"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_green"
        android:text="@string/start"
        android:fontFamily="@font/calibri_bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/zero_time"
        android:textColor="@color/texts_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_white_text" />

    <TextView
        android:id="@+id/timer_white_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/timer_text"
        app:layout_constraintStart_toStartOf="@+id/timer_text"
        app:layout_constraintTop_toBottomOf="@+id/timer_text"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/zero_km"
        android:textColor="@color/texts_color"
        android:textSize="@dimen/green_text_size_portrait"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/timer_text"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <TextView
        android:id="@+id/distance_km_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km"
        android:textColor="@color/texts_color"
        android:textSize="@dimen/green_text_small_size"
        app:layout_constraintBottom_toBottomOf="@+id/tv_distance"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/tv_distance"
        app:layout_constraintTop_toTopOf="@+id/tv_distance"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/distance_white_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/distance"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/distance_km_text"
        app:layout_constraintStart_toStartOf="@+id/tv_distance"
        app:layout_constraintTop_toBottomOf="@+id/tv_distance" />

    <RelativeLayout
        android:id="@+id/ic_digital_speed_bg"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/digital_speedometer_bg"
            tools:visibility="visible" />

        <com.wonderapps.speedometer.DigitSpeedView
            android:id="@+id/speed_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            app:showUnit="false"
            app:speed="0"
            app:speedTextColor="@color/texts_color"
            app:speedTextSize="@dimen/speed_text_size">
        </com.wonderapps.speedometer.DigitSpeedView>

        <TextView
            android:id="@+id/digital_speed_km_per_hr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/km_per_hr"
            android:textColor="@color/texts_color"
            android:textSize="@dimen/green_text_small_size" />
    </RelativeLayout>

    <TextView
        android:id="@+id/max_speed_text_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/max_speed"
        android:textColor="#ffffff"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/max_speed_km_per_hr" />

    <ImageView
        android:id="@+id/img_compass"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/speed_bg"
        android:src="@drawable/compass"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/maxspeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/texts_color"
        android:textSize="@dimen/green_text_size_portrait"
        app:layout_constraintEnd_toEndOf="@+id/avgspeed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/timer_text" />

    <TextView
        android:id="@+id/max_speed_km_per_hr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/km_per_hr"
        android:textColor="@color/texts_color"
        android:textSize="@dimen/green_text_small_size"
        app:layout_constraintBottom_toBottomOf="@+id/maxspeed"
        app:layout_constraintStart_toEndOf="@+id/maxspeed"
        app:layout_constraintTop_toTopOf="@+id/maxspeed"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/avgspeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/zero"
        android:textColor="@color/texts_color"
        android:textSize="@dimen/green_text_size_portrait"
        app:layout_constraintBottom_toTopOf="@+id/date_text_white"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <TextView
        android:id="@+id/maximum_km_per_hr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/km_per_hr"
        android:textColor="@color/texts_color"
        android:textSize="@dimen/green_text_small_size"
        app:layout_constraintBottom_toBottomOf="@+id/avgspeed"
        app:layout_constraintStart_toEndOf="@+id/avgspeed"
        app:layout_constraintTop_toTopOf="@+id/avgspeed"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/date_text_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/avg_speed"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/avgspeed" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="9dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="130dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.72" />

    <TextView
        android:id="@+id/gps_status_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_digital_speed_bg" />

    <TextView
        android:id="@+id/gps_on_off_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/red"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gps_status_map" />

    <TextView
        android:id="@+id/internet_status_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gps_on_off_map"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
