<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <LinearLayout
                android:id="@+id/linearLayout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/menu_background"
                android:padding="12dp"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_text"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/calibri_bold"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout_title"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/deletion_text"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayout_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/custom_button_empty"
                    android:layout_weight="1"
                    android:text="@string/no_text"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/calibri_bold"/>

                <Button
                    android:id="@+id/button_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/custom_button_empty"
                    android:layout_weight="1"
                    android:text="@string/yes_text"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/calibri_bold"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>