<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="com.wonderapps.speedometer.Activities.MainActivity">

    <include
        android:id="@+id/toolbar1"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <LinearLayout
                android:id="@+id/linearLayout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/privacy_policy"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/calibri_bold"/>

                <ImageView
                    android:id="@+id/dialog_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_gravity="end"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/linearLayout_title">

                <WebView
                    android:id="@+id/webview_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <com.wonderapps.speedometer.CustomViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.2"
        app:tabIndicatorColor="@color/tab_item_color"
        app:tabIndicatorGravity="top"
        app:tabSelectedTextColor="@color/tab_item_color"
        app:tabTextColor="#ffffff">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabChats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabCalls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabGraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center" />

</LinearLayout>